[package]
name = "transport"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "transport"
path = "src/lib.rs"

[features]
allow_explicit_certificate_trust = []

[dependencies]
bincode = "*"
tokio = { version = "*", features = ["full"] }
tokio-rustls = "*"
rustls = "*"
futures = "*"
serde = "*"
dialectic = { git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-tokio-serde = { git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-tokio-serde-bincode = { git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-reconnect = { features = ["serde", "humantime-serde"], git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
uuid = { version = "*", features = ["serde", "v4"] }
tracing = "*"
thiserror = "*"
webpki = "*"
webpki-roots = "*"
pem = "*"


