[package]
name = "transport"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "transport"
path = "src/lib.rs"

[features]
allow_explicit_certificate_trust = []

[dependencies]
bincode = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0"
rustls = "0"
futures = "0"
serde = "1"
dialectic = { git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-tokio-serde = { git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-tokio-serde-bincode = { git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
dialectic-reconnect = { features = ["serde", "humantime-serde"], git = "https://github.com/boltlabs-inc/dialectic.git", branch = "main" }
uuid = { version = "0", features = ["serde", "v4"] }
tracing = "0"
thiserror = "1"
webpki = "0"
webpki-roots = "0"
pem = "1"


